--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "Temples to Toilets",
 	"manifest_version": 2,
-	"version": "1.1.0",
+	"version": "1.2.0",
 
 	"background": {
 		"scripts": ["background.js"],
@@ -27,8 +27,9 @@
     	"name":"Temples to Toilets",
     	"default_title": "Temples to Toilets",
     	"default_icon": {
-    		"19": "icons/templetoilet-sqr-19.png",
-    		"38": "icons/templetoilet-sqr-38.png"
+    		"128": "icons/templetoilet-sqr-128.png"
     	}
-  }
+  	},
+  	"short_name": "Temples to Toilets",
+  	"homepage_url": "http://139.59.17.245/group-project-1"
 }
